--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "redux-mock-store": "^1.5.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.43",
@@ -37,11 +38,10 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "whatwg-fetch": "^3.6.19"
   },
-
   "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest",
