--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "src", 
+    "babel.config.json"
+   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
