--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sprint-8",
+  "homepage": "https://sprint-8-Stephanie.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
